--- a/Lesson7/Public/404.html
+++ b/Lesson7/Public/404.html
@@ -2,79 +2,48 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
+    <title>Страница не найдена</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f4f4f4;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f5f5f5;
         }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
-        header {
-            background-color: #4CAF50;
-            color: white;
+        .error-message {
+            color: #666;
+            font-family: Arial, sans-serif;
             text-align: center;
-            padding: 10px 0;
-        }
-        nav {
-            margin: 15px 0;
-            text-align: center;
-        }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #4CAF50;
-        }
-        main {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            color: #777;
-            font-size: 0.9em;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Добро пожаловать на мой сайт!</h1>
-        </header>
+    <img id="not-found-image" src="404-image.jpg" alt="Страница не найдена">
 
-        <nav>
-            <a href="#">Главная</a>
-            <a href="#">О нас</a>
-            <a href="#">Услуги</a>
-            <a href="#">Контакты</a>
-        </nav>
+    <script>
+        const img = document.getElementById('not-found-image');
 
-        <main>
-            <h2>О сайте</h2>
-            <p>Это простая главная страница вашего сайта. Здесь можно разместить краткое описание и основную информацию.</p>
-            
-            <h2>Последние новости</h2>
-            <ul>
-                <li>Новость 1: что-то интересное произошло.</li>
-                <li>Новость 2: ещё одна важная новость.</li>
-                <li>Новость 3: не пропустите это событие!</li>
-            </ul>
-        </main>
-
-        <footer>
-            &copy; 2026 Мой сайт. Все права защищены.
-        </footer>
-    </div>
+        img.onerror = function() {
+            // Если изображение не загрузилось, показываем текст
+            img.style.display = 'none';
+            document.body.innerHTML = `
+                <div class="error-message">
+                    <h1>404</h1>
+                    <p>Страница не найдена</p>
+                </div>
+            `;
+        };
+    </script>
 </body>
 </html>
