--- a/Lesson7/Public/index.html
+++ b/Lesson7/Public/index.html
@@ -3,78 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
+    <title>Моё облако</title>
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
         }
         .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
             text-align: center;
-            padding: 10px 0;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
+            width: 90%;
+            max-width: 500px;
         }
-        nav {
-            margin: 15px 0;
-            text-align: center;
+        h1 {
+            margin: 0 0 20px 0;
+            font-size: 2.5em;
+            letter-spacing: 1px;
         }
-        nav a {
-            margin: 0 15px;
+        .btn {
+            display: inline-block;
+            padding: 12px 28px;
+            background-color: #fff;
+            color: #667eea;
             text-decoration: none;
-            color: #4CAF50;
+            border-radius: 50px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
-        main {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            color: #777;
-            font-size: 0.9em;
+        .btn:hover {
+            background-color: #667eea;
+            color: #fff;
+            transform: translateY(-2px);
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Добро пожаловать на мой сайт!</h1>
-        </header>
-
-        <nav>
-            <a href="#">Главная</a>
-            <a href="#">О нас</a>
-            <a href="#">Услуги</a>
-            <a href="#">Контакты</a>
-        </nav>
-
-        <main>
-            <h2>О сайте</h2>
-            <p>Это простая главная страница вашего сайта. Здесь можно разместить краткое описание и основную информацию.</p>
-            
-            <h2>Последние новости</h2>
-            <ul>
-                <li>Новость 1: что-то интересное произошло.</li>
-                <li>Новость 2: ещё одна важная новость.</li>
-                <li>Новость 3: не пропустите это событие!</li>
-            </ul>
-        </main>
-
-        <footer>
-            &copy; 2026 Мой сайт. Все права защищены.
-        </footer>
+        <h1>Моё облако</h1>
+        <a href="/rules" class="btn">Правила</a>
     </div>
 </body>
 </html>
